log
Thu 21 Mar 2024 05:10:08 PM UTC: 
 tests:  0|5
total_score: 0/70
863a974
Thu 21 Mar 2024 05:24:53 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
8a269aa
Thu 21 Mar 2024 05:29:53 PM UTC: 
 exercises.c | 20 +++++++-------------
 1 file changed, 7 insertions(+), 13 deletions(-)
 tests:  1|4
total_score: 10/70
03808ab
Thu 21 Mar 2024 05:31:31 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
cfe5d29
Thu 21 Mar 2024 05:31:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
38dc786
Thu 21 Mar 2024 05:32:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
562bfb9
Thu 21 Mar 2024 06:11:45 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
0271edb
Thu 21 Mar 2024 06:12:07 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
6318541
Thu 21 Mar 2024 06:16:05 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:75:28: error: invalid use of undefined type ‘struct List’
   75 |     int *dato = (int*)lista[i]
      |                            ^
exercises.c:75:23: error: invalid use of incomplete typedef ‘List’
   75 |     int *dato = (int*)lista[i]
      |                       ^~~~~
exercises.c:76:5: error: expected ‘,’ or ‘;’ before ‘if’
   76 |     if(*dato == elem) {
      |     ^~
exercises.c:75:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   75 |     int *dato = (int*)lista[i]
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
9089134
